--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,1 @@
-{
-  "version": 2,
-  "builds": [
-    {
-      "src": "server/dist/index.js",
-      "use": "@vercel/node",
-      "config": {
-        "includeFiles": ["server/dist/**/*"]
-      }
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "server/dist/index.js"
-    }
-  ]
-}
+{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/api" }] }
